// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v2alpha;

import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/annotations.proto";
import "google/api/resource.proto";
import "wfa/measurement/reporting/v2alpha/report_schedule_iteration.proto";

option java_package = "org.wfanet.measurement.reporting.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "ReportScheduleIterationsServiceProto";

// Service for interacting with `ReportScheduleIteration` resources.
service ReportScheduleIterations {
  // Returns the `ReportScheduleIteration` with the specified resource key.
  rpc GetReportScheduleIteration(GetReportScheduleIterationRequest)
      returns (ReportScheduleIteration) {
    option (google.api.http) = {
      get: "/v2alpha/{name=measurementConsumers/*/reportSchedules/*/iterations/*}"
    };
    option (google.api.method_signature) = "name";
  }

  // Lists `ReportScheduleIteration`s.
  rpc ListReportScheduleIterations(ListReportScheduleIterationsRequest)
      returns (ListReportScheduleIterationsResponse) {
    option (google.api.http) = {
      get: "/v2alpha/{parent=measurementConsumers/*/reportSchedules/*}/iterations"
    };
    option (google.api.method_signature) = "parent";
  }
}

message GetReportScheduleIterationRequest {
  // The name of the `ReportScheduleIteration` to retrieve.
  // Format:
  // measurementConsumers/{measurement_consumer}/reportSchedules/{report_schedule}/iterations/{report_schedule_iteration}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "reporting.halo-cmm.org/ReportScheduleIteration"
    }
  ];
}

message ListReportScheduleIterationsRequest {
  // Resource name of the parent `ReportSchedule`.
  string parent = 1 [(google.api.resource_reference).type =
                         "reporting.halo-cmm.org/ReportSchedule"];

  // The maximum number of `ReportScheduleIteration`s to return. The service
  // may return fewer than this value. If unspecified, at most 50
  // `ReportScheduleIteration`s will be returned. The maximum value is 1000;
  // values above 1000 will be coerced to 1000.
  int32 page_size = 2;

  // A token from a previous call, specified to retrieve the next page. See
  // https://aip.dev/158.
  string page_token = 3;

  // Result filter. Raw CEL expression that is applied.
  string filter = 4;
}

message ListReportScheduleIterationsResponse {
  // The `ReportScheduleIteration` resources. Ordered by `report_event_time`,
  // descending.
  repeated ReportScheduleIteration report_schedule_iterations = 1;

  // A token that can be specified in a subsequent call to retrieve the next
  // page. See https://aip.dev/158.
  string next_page_token = 2;
}
